	ia64*-*-hpux* target.
	(bfd_elf64_ia64_hpux_big_vec): Likewise.
	* targets.c: Ditto.
	* configure.in: Ditto.
	* configure: Regenerate
	* elfxx-ia64.c (elfNN_ia64_final_write_processing): Replace use of
	alloca with bfd_malloc.
	(get_local_sym_hash): Likewise.
	(elfNN_hpux_post_process_headers): New function.
	#include elfNN-target.h again with values for IA64 HP-UX vector.

2001-12-18  H.J. Lu <hjl@gnu.org>

	* elf.c (_bfd_elf_copy_private_bfd_data): Also copy GP.

2001-12-18  H.J. Lu <hjl@gnu.org>

	* elf.c (_bfd_elf_copy_private_bfd_data): Update comments.

2001-12-18  H.J. Lu <hjl@gnu.org>

	* elf-bfd.h (_bfd_elf_copy_private_bfd_data): New. Prototype.
	(_bfd_mips_elf_copy_private_bfd_data): Removed.

	* elf.c (_bfd_elf_copy_private_bfd_data): New. Copy e_flags in
	the ELF header.

	* elf32-i370.c (??_elf_copy_private_bfd_data): Removed.
	(bfd_elf??_bfd_copy_private_bfd_data): Removed.
	* elf32-m32r.c: Likewise.
	* elf32-m68k.c: Likewise.
	* elf32-mcore.c: Likewise.
	* elf32-mips.c: Likewise.
	* elf32-ppc.c: Likewise.
	* elf32-v850.c: Likewise.
	* elf64-ppc.c: Likewise.
	* elf64-sparc.c: Likewise.
	* elfxx-ia64.c: Likewise.

	* elf64-mips.c (bfd_elf64_bfd_copy_private_bfd_data): Removed.

	* elfxx-target.h (bfd_elfNN_bfd_copy_private_bfd_data): Defined
	to _bfd_elf_copy_private_bfd_data.

2001-12-18  Martin Schwidefsky  <schwidefsky@de.ibm.com>
 
	* elf32-s390 (elf_s390_check_relocs): Pass addend to
	gc_record_vtentry.
	* elf64-s390 (elf_s390_check_relocs): Likewise.
	Fix by Andreas Jaeger <aj@suse.de>.

2001-12-18  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.host: Correctly match all NetBSD/mips
	hosts.

2001-12-18  matthew green  <mrg@eterna.com.au>

	* config.bfd (m68*-*-netbsdelf*): New target.
	(m68*-*-netbsd): Also include bfd_elf32_m68k_vec.
	(m68*-*-netbsdaout*): New alias for m68*-*-netbsd.

2001-12-18  Jakub Jelinek  <jakub@redhat.com>

	* elflink.h (size_dynamic_sections): Skip anonymous version tag.